--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,10 @@
   width: 33%; /* Set each item to take up one-third of the container width */
 }
 
+.petASCII {
+  margin-left: 3%;
+}
+
 button {
   appearance: none;
   border: 1px solid rgba(27, 31, 35, 0.15);
