--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/*   ------------PET/GENERAL ----------  */
+
 .petContainer {
   display: flex;
   align-items: center;
@@ -63,6 +65,8 @@
   font-size: 16px; /* Adjust font size */
 }
 
+/*   ------------BUTTONS CSS ----------  */
+
 button {
   appearance: none;
   border: 1px solid rgba(55, 63, 70, 0.611);
@@ -110,4 +114,44 @@ button {
 
 .playButton:hover {
   background-color: #ba277398;
+}
+
+/*   ------------MODAL CSS ----------  */
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close-button {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
