--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,7 @@ button {
   background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
+  text-align: center;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
 }
